# "make install" will install these in the install include directory, for example
# /usr/local/include/ndn-cpp/name.hpp.
# These files are included by the application with, for example
# #include <ndn-cpp/namp.hpp>
# Internal include headers are not put in this public install directory.
nobase_include_HEADERS = ndn-cpp/ndn-cpp-config.h
